Basic SQLite and ContentProvider classes added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">I Paid</string>
+    <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+  - By convention, "action" denotes that this String will be used as the label for an        -
+  - Action, typically from the action bar.  The ActionBar is limited real estate, so         -
+  - shorter is better.                                                                       -
+  - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
+    <string name="content_authority">uk.co.dk2636.ipaid</string>
+
 </resources>
